criei arquivos do adm

--- a/.env
+++ b/.env
@@ -1,1 +1,4 @@
 DATABASE_URL=mongodb://localhost:27017/coletas
+SECRET= 
+
+mongodb+srv://KAMILA:25mila25@projeto-reprograma.2nb7l.mongodb.net/myFirstDatabase?retryWrites=true&w=majority
